# cs180-21-5collaborators

./: .gitignore  README.md  patient.cpp  server.cpp
backend/: CMakeLists.txt  main.cpp  patient.h
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  Login.js  PrivateRoute.js  index.js  userinfo.json
frontend/src/Dashboard/: Dashboard.js  Dashboard.jsx
frontend/src/components/: AddForm.js  AddPatient.jsx  Header.js  Header.jsx  Last20Table.js  Last20Table.jsx  Last20alc.jsx  Last20dia.jsx  Last20handi.jsx  Last20hyper.jsx  Random20Table.js  Search.js  Table.js  TableRow.js  UpdatePatient.jsx  UpdatePatientModal.js
